--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Md. Minhazul Islam Khan",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
